@@ -1,3 +1,7 @@
+2007-08-14  Marcus Brinkmann  <marcus@gnu.org>
+
+	* ia32-shutdown.c (reset): Swap arguments to outb_p.
+
 2005-04-17  Matthieu Lemerre <racin@free.fr>
 
 	* wortel.c (serve_bootstrap_requests): Implement
